# android-smartdeeplink

./: .gitignore  README.md  build.gradle.kts  gradle.properties  publish.gradle  settings.gradle.kts
annotation/: build.gradle.kts
annotation/src/main/java/com/pknujsp/annotation/: Annotation.kt
annotation/src/main/java/com/pknujsp/annotationprocessor/: Annotation.kt  DeepLinkNavArgsProcessor.kt
annotation/src/main/java/io/github/pknujsp/annotationprocessor/: Annotation.kt  DeepLinkNavArgsProcessor.kt
annotationprocessor/: build.gradle.kts
annotationprocessor/src/main/java/com/pknujsp/annotationprocessor/: DeepLinkNavArgsProcessor.kt
app/: build.gradle.kts
app/src/androidTest/java/com/pknujsp/deeplinklibrarytest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pknujsp/deeplinklibrarytest/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/io/github/pknujsp/testbed/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: app_nav_graph.xml  nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pknujsp/deeplinklibrarytest/: ExampleUnitTest.kt
app/src/test/java/io/pknujsp/deeplinklibrarytest/: ExampleUnitTest.kt
blur/: build.gradle.kts
blur/src/main/: AndroidManifest.xml
blur/src/main/cpp/: BlurManager.cpp  BlurManager.h  CMakeLists.txt  blur-manager.cpp  blur-manager.h  blur.cpp  blur.h  glblur.cpp  glblur.h  glblurringview.cpp  glblurringview.h  image-processor.cpp  nativelib.cpp  shared-values.h  stack-blur-argb8888.cpp  stack-blur-rgb565.cpp  threadpool.cpp  threadpool.h
blur/src/main/cpp/stackblur/: ABGR-StackBlur.cpp  RGB-StackBlur.cpp  abgr-stackblur.h  blur.h  shared-values.h  threadpool.cpp  threadpool.h
blur/src/main/cpp/toolkit/: Blend.cpp  Blur.cpp  Blur_advsimd.S  ColorMatrix.cpp  ColorMatrix_neon.S  Convolve3x3.cpp  Convolve5x5.cpp  Histogram.cpp  JniEntryPoints.cpp  Lut.cpp  Lut3d.cpp  RenderScriptToolkit.h  Resize.cpp  TaskProcessor.cpp  Utils.cpp  Utils.h  render-toolkit.cpp  render-toolkit.h  x86.cpp
blur/src/main/res/values/: ids.xml
blur/src/main/rs/: stackblur.rs
build-logics/: .editorconfig  .gitignore  gradle.properties  settings.gradle.kts
build-logics/plugins/: build.gradle.kts
build-logics/plugins/src/main/kotlin/: ApplicationPlugin.kt  HiltPlugin.kt  KotlinAndroid.kt  KotlinCommons.kt  LibraryPlugin.kt  ReleaseLibraryKotlinAndroid.kt  ReleaseLibraryPlugin.kt  ViewPlugin.kt
core/annotation/: build.gradle.kts
core/compiler/: build.gradle.kts
core/model/: build.gradle.kts
core/ui/: build.gradle.kts
core/ui/src/main/: AndroidManifest.xml
core/ui/src/main/res/anim/: bottomsheet_slide_in.xml
core/ui/src/main/res/drawable/: dialog_background.xml  icon_more_edited.xml  rounded_dialog_background.xml
core/ui/src/main/res/layout/: bottomsheet_test.xml  view_full_loading.xml  view_loading.xml
core/ui/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
coroutineext/: build.gradle.kts
deeplink/: build.gradle.kts  publish-remote.gradle
deeplink/src/androidTest/java/io/pknujsp/deeplink/: ExampleInstrumentedTest.kt
deeplink/src/main/java/com/pknujsp/deeplink/: ArgsHelper.kt  DeepArgs.kt  DeepNavArgs.kt  UriBuilder.kt
deeplink/src/test/java/io/pknujsp/deeplink/: ExampleUnitTest.kt
feature/card/: build.gradle.kts
feature/card/src/main/: AndroidManifest.xml
feature/card/src/main/res/drawable/: card_background.xml
feature/card/src/main/res/layout/: fragment_credit_card.xml
feature/card/src/main/res/navigation/: card_nav.xml
feature/compose/: build.gradle.kts
feature/compose/src/main/res/drawable/: arrow.xml  baseline_restaurant_24.xml  blue_skies_gradient.xml  bottomsheet_background.xml  card_background.xml  circle_btn_background.xml  cloudiness.xml  cold.xml  day_checkbox.xml  day_clear.xml  day_mostly_cloudy.xml  day_partly_cloudy.xml  day_scattered_clouds.xml  dewpoint.xml  favorite_address_background_in_side_nav.xml  flickrlogo.xml  fog.xml  hot.xml  humidity.xml  icon_rounded_rect_background.xml  img_btn_background.xml  location.xml  map_header_background.xml  maxtemperature.xml  mintemperature.xml  night_clear.xml  night_mostly_cloudy.xml  night_partly_cloudy.xml  night_scattered_clouds.xml  overcast.xml  pop.xml  por.xml  pos.xml  precipitationvolume.xml  pressure.xml  progressview_background.xml  rain.xml  raindrop.xml  rainvolume.xml  realfeeltemperature.xml  (+34 more)
feature/compose/src/main/res/values/: strings.xml
feature/dialog/: build.gradle.kts
feature/dialog/src/main/res/layout/: fragment_main_dialog.xml
feature/dialog/src/main/res/navigation/: main_dialog_nav.xml
feature/dialog/src/main/res/raw/: android_lottie.json
feature/holographic/: build.gradle.kts
feature/holographic/src/main/res/layout/: fragment_image.xml
feature/holographic/src/main/res/navigation/: holographic_nav.xml  image_nav.xml
feature/holographic/src/main/res/values/: strings.xml
feature/home/: build.gradle.kts
feature/home/src/main/res/layout/: fragment_home.xml
feature/home/src/main/res/navigation/: home_nav.xml
feature/result/: build.gradle.kts
feature/result/src/main/res/layout/: fragment_result.xml
feature/result/src/main/res/navigation/: result_nav.xml
feature/result/src/main/res/values/: strings.xml
feature/search/: build.gradle.kts
feature/search/src/main/res/layout/: fragment_search.xml
feature/search/src/main/res/navigation/: search_nav.xml
feature/search/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: publish-android-module.gradle  publish-jvm-module.gradle  publish-module.gradle  publish-root.gradle
simpledialog/: build.gradle.kts
simpledialog/src/main/cpp/: CMakeLists.txt  glblurringview.cpp  glblurringview.h
simpledialog/src/main/res/anim/: bottomsheet_slide_out.xml
simpledialog/src/main/res/values/: ids.xml  styles.xml
(+195 files in other folders)
